--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="container">
             <h1>Christian Kabulo</h1>
-            <p>Ingénieur en Automatisation des Tests | Conseiller en Pratique de Test | Co-Fondateur | AWS Certified</p>
+            <p>Co-fondateur | Ingénieur en Automatisation des Tests | Conseiller en Pratique de Test</p>
             <nav>
                 <ul>
                     <li><a href="#about">À propos</a></li>
@@ -25,43 +25,52 @@
     <section id="about">
         <div class="container">
             <h2>À propos</h2>
-            <p>Je suis un ingénieur spécialisé en automatisation des tests, avec plus de 5 ans d'expérience dans la qualité logicielle. Passionné par l'amélioration continue et la mise en œuvre de solutions cloud (certifié AWS), je suis également co-fondateur de deux entreprises dans le domaine de l'informatique : KhiPunch au Canada et Amico SARL en RDC.</p>
+            <p>
+                Je suis un ingénieur en automatisation des tests avec plus de 5 ans d'expérience dans la qualité logicielle, 
+                spécialisé dans la standardisation des processus et la gestion d'équipes techniques. 
+                Co-fondateur de deux entreprises innovantes en IT, je combine expertise technique et leadership pour 
+                transformer des idées en solutions concrètes.
+            </p>
         </div>
     </section>
 
     <section id="projects">
         <div class="container">
-            <h2>Projets</h2>
-            <ul>
-                <li><strong>Bibliothèque d’automatisation :</strong> Développement d’une solution interne pour accélérer les tests (Banque Nationale).</li>
-                <li><strong>Infrastructure Cloud :</strong> Implémentation d'infrastructures avec Terraform chez GroupeLacce.</li>
-                <li><strong>Hackathon CharityOne :</strong> Développement d'une application encourageant les dons caritatifs (3e place).</li>
-                <li><strong>KhiPunch :</strong> Conception d'une application de gestion des ressources humaines pour une entreprise canadienne.</li>
-                <li><strong>Amico SARL :</strong> Mise en œuvre d'un système ERP pour une entreprise locale en RDC.</li>
-            </ul>
+            <h2>Projets Réalisés</h2>
+            <div class="project">
+                <h3>Bibliothèque d’automatisation</h3>
+                <p>Développement d’une solution interne pour automatiser et accélérer les tests (Banque Nationale).</p>
+            </div>
+            <div class="project">
+                <h3>Infrastructure Cloud</h3>
+                <p>Implémentation d'infrastructures avec Terraform et pipelines CI/CD robustes (GroupeLacce).</p>
+            </div>
+            <div class="project">
+                <h3>Hackathon CharityOne</h3>
+                <p>Création d'une application encourageant les dons caritatifs, classée 3e au concours.</p>
+            </div>
         </div>
     </section>
 
     <section id="experience">
         <div class="container">
-            <h2>Expérience</h2>
-            <ul>
-                <li><strong>Conseiller de Pratique en Test</strong> - Banque Nationale (2022 - Présent)</li>
-                <li><strong>Ingénieur en Automatisation des Tests</strong> - Banque Nationale (2019 - 2022)</li>
-                <li><strong>Responsable Technique</strong> - GroupeLacce Inc (2022 - Présent)</li>
-                <li><strong>Co-fondateur</strong> - KhiPunch, Canada
-                    <ul>
-                        <li>Développement de solutions informatiques pour PME et startups.</li>
-                        <li>Optimisation des processus métier et implémentation d'infrastructures cloud.</li>
-                    </ul>
-                </li>
-                <li><strong>Co-fondateur</strong> - Amico SARL, RDC
-                    <ul>
-                        <li>Implémentation de systèmes ERP pour entreprises locales.</li>
-                        <li>Développement de solutions adaptées à divers secteurs, notamment l'agriculture et la logistique.</li>
-                    </ul>
-                </li>
-            </ul>
+            <h2>Expérience Professionnelle</h2>
+            <div class="job">
+                <h3>Co-fondateur - KhiPunch (Canada)</h3>
+                <p>Développement de solutions IT pour PME et startups, avec une expertise en infrastructures cloud.</p>
+            </div>
+            <div class="job">
+                <h3>Co-fondateur - Amico SARL (RDC)</h3>
+                <p>Implémentation de systèmes ERP et solutions adaptées à divers secteurs, dont l'agriculture.</p>
+            </div>
+            <div class="job">
+                <h3>Conseiller de Pratique en Test - Banque Nationale</h3>
+                <p>Standardisation des méthodologies de test et accompagnement des équipes pluridisciplinaires.</p>
+            </div>
+            <div class="job">
+                <h3>Responsable Technique - GroupeLacce</h3>
+                <p>Gestion d'équipe et mise en œuvre de solutions d'infrastructure comme code.</p>
+            </div>
         </div>
     </section>
 
