--- a/index.html
+++ b/index.html
@@ -10,15 +10,7 @@
     <header>
         <div class="container">
             <h1>Christian Kabulo</h1>
-            <p>Co-fondateur | Ingénieur en Automatisation des Tests | Conseiller en Pratique de Test</p>
-            <nav>
-                <ul>
-                    <li><a href="#about">À propos</a></li>
-                    <li><a href="#projects">Projets</a></li>
-                    <li><a href="#experience">Expérience</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+            <p>Ingénieur en IT | Expert en Automatisation des Tests | Entrepreneur</p>
         </div>
     </header>
 
@@ -26,51 +18,34 @@
         <div class="container">
             <h2>À propos</h2>
             <p>
-                Je suis un ingénieur en automatisation des tests avec plus de 5 ans d'expérience dans la qualité logicielle, 
-                spécialisé dans la standardisation des processus et la gestion d'équipes techniques. 
-                Co-fondateur de deux entreprises innovantes en IT, je combine expertise technique et leadership pour 
-                transformer des idées en solutions concrètes.
+                Je suis un ingénieur en IT passionné, spécialisé dans l'automatisation des tests et la gestion de projets techniques. 
+                Avec plus de 5 ans d'expérience, j'ai acquis une solide expertise dans la mise en œuvre de solutions innovantes, la standardisation des processus et l'accompagnement d'équipes pluridisciplinaires. 
+                Mon objectif est de transformer les idées en solutions technologiques concrètes, tout en garantissant des résultats mesurables et de haute qualité.
             </p>
         </div>
     </section>
 
-    <section id="projects">
+    <section id="skills">
         <div class="container">
-            <h2>Projets Réalisés</h2>
-            <div class="project">
-                <h3>Bibliothèque d’automatisation</h3>
-                <p>Développement d’une solution interne pour automatiser et accélérer les tests (Banque Nationale).</p>
-            </div>
-            <div class="project">
-                <h3>Infrastructure Cloud</h3>
-                <p>Implémentation d'infrastructures avec Terraform et pipelines CI/CD robustes (GroupeLacce).</p>
-            </div>
-            <div class="project">
-                <h3>Hackathon CharityOne</h3>
-                <p>Création d'une application encourageant les dons caritatifs, classée 3e au concours.</p>
-            </div>
+            <h2>Compétences</h2>
+            <ul>
+                <li>Automatisation des tests avec Selenium, JMeter, Postman</li>
+                <li>Développement et intégration de pipelines CI/CD</li>
+                <li>Infrastructure comme code avec Terraform</li>
+                <li>Gestion de projets et mentorat technique</li>
+                <li>Utilisation des services cloud (certifié AWS Cloud Practitioner)</li>
+            </ul>
         </div>
     </section>
 
     <section id="experience">
         <div class="container">
             <h2>Expérience Professionnelle</h2>
-            <div class="job">
-                <h3>Co-fondateur - KhiPunch (Canada)</h3>
-                <p>Développement de solutions IT pour PME et startups, avec une expertise en infrastructures cloud.</p>
-            </div>
-            <div class="job">
-                <h3>Co-fondateur - Amico SARL (RDC)</h3>
-                <p>Implémentation de systèmes ERP et solutions adaptées à divers secteurs, dont l'agriculture.</p>
-            </div>
-            <div class="job">
-                <h3>Conseiller de Pratique en Test - Banque Nationale</h3>
-                <p>Standardisation des méthodologies de test et accompagnement des équipes pluridisciplinaires.</p>
-            </div>
-            <div class="job">
-                <h3>Responsable Technique - GroupeLacce</h3>
-                <p>Gestion d'équipe et mise en œuvre de solutions d'infrastructure comme code.</p>
-            </div>
+            <ul>
+                <li><strong>Conseiller en Pratique de Test</strong> - Standardisation des méthodologies de test et accompagnement des équipes.</li>
+                <li><strong>Ingénieur en Automatisation</strong> - Mise en œuvre de solutions automatisées pour accélérer les cycles de développement.</li>
+                <li><strong>Responsable Technique</strong> - Gestion et optimisation des infrastructures IT.</li>
+            </ul>
         </div>
     </section>
 
