--- a/index.html
+++ b/index.html
@@ -3,24 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Christian Kabulo</title>
+    <title>Christian Kabulo - Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Christian Kabulo</h1>
-            <p>Ingénieur en IT | Expert en Automatisation des Tests | Entrepreneur</p>
+            <div class="header-content">
+                <h1>Christian Kabulo</h1>
+                <p>Ingénieur IT | Expert en Automatisation des Tests | Entrepreneur</p>
+                <a href="#contact" class="btn">Contactez-moi</a>
+            </div>
         </div>
     </header>
+
+    <nav>
+        <ul>
+            <li><a href="#about">À propos</a></li>
+            <li><a href="#skills">Compétences</a></li>
+            <li><a href="#projects">Projets</a></li>
+            <li><a href="#experience">Expérience</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
     <section id="about">
         <div class="container">
             <h2>À propos</h2>
             <p>
-                Je suis un ingénieur en IT passionné, spécialisé dans l'automatisation des tests et la gestion de projets techniques. 
-                Avec plus de 5 ans d'expérience, j'ai acquis une solide expertise dans la mise en œuvre de solutions innovantes, la standardisation des processus et l'accompagnement d'équipes pluridisciplinaires. 
-                Mon objectif est de transformer les idées en solutions technologiques concrètes, tout en garantissant des résultats mesurables et de haute qualité.
+                Je suis un ingénieur IT spécialisé dans l'automatisation des tests et la gestion de projets techniques. 
+                Avec plus de 5 ans d'expérience, je me concentre sur la création de solutions fiables et performantes, 
+                tout en accompagnant des équipes pluridisciplinaires vers l'excellence.
             </p>
         </div>
     </section>
@@ -28,23 +41,52 @@
     <section id="skills">
         <div class="container">
             <h2>Compétences</h2>
-            <ul>
-                <li>Automatisation des tests avec Selenium, JMeter, Postman</li>
-                <li>Développement et intégration de pipelines CI/CD</li>
-                <li>Infrastructure comme code avec Terraform</li>
-                <li>Gestion de projets et mentorat technique</li>
-                <li>Utilisation des services cloud (certifié AWS Cloud Practitioner)</li>
-            </ul>
+            <div class="skills-list">
+                <div>
+                    <h3>Tests et Qualité</h3>
+                    <p>Selenium, JMeter, Postman</p>
+                </div>
+                <div>
+                    <h3>Infrastructure</h3>
+                    <p>Terraform, CI/CD, GitHub Actions</p>
+                </div>
+                <div>
+                    <h3>Cloud</h3>
+                    <p>AWS (certifié Cloud Practitioner)</p>
+                </div>
+                <div>
+                    <h3>Gestion</h3>
+                    <p>Standardisation, Leadership technique</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="projects">
+        <div class="container">
+            <h2>Projets</h2>
+            <div class="project-card">
+                <h3>Bibliothèque d’automatisation</h3>
+                <p>Création d'une bibliothèque pour accélérer les tests automatisés (Banque Nationale).</p>
+            </div>
+            <div class="project-card">
+                <h3>Infrastructure Cloud</h3>
+                <p>Déploiement d’infrastructures avec Terraform et pipelines CI/CD robustes.</p>
+            </div>
+            <div class="project-card">
+                <h3>Hackathon CharityOne</h3>
+                <p>Développement d'une application encourageant les dons caritatifs (3e place).</p>
+            </div>
         </div>
     </section>
 
     <section id="experience">
         <div class="container">
-            <h2>Expérience Professionnelle</h2>
+            <h2>Expérience</h2>
             <ul>
-                <li><strong>Conseiller en Pratique de Test</strong> - Standardisation des méthodologies de test et accompagnement des équipes.</li>
-                <li><strong>Ingénieur en Automatisation</strong> - Mise en œuvre de solutions automatisées pour accélérer les cycles de développement.</li>
-                <li><strong>Responsable Technique</strong> - Gestion et optimisation des infrastructures IT.</li>
+                <li><strong>Conseiller en Pratique de Test</strong> - Standardisation des processus de test, mentorat d’équipes.</li>
+                <li><strong>Ingénieur en Automatisation des Tests</strong> - Automatisation des tests pour réduire les délais et améliorer la fiabilité.</li>
+                <li><strong>Responsable Technique</strong> - Gestion d'équipes IT et déploiement d'infrastructures.</li>
             </ul>
         </div>
     </section>
